Fixed section layout issues (too much padding)

--- a/Lyra_UI/css/people.css
+++ b/Lyra_UI/css/people.css
@@ -205,15 +205,6 @@
     }
 }
 
-@media (max-width: 920px) {
-    .section-header {
-        margin: 10px 14px;
-    }
-    .section-title.title {
-        line-height: normal;
-    }
-}
-
 @media (max-width: 768px) {
     .people {
         width: 100%;
