--- a/Lyra_UI/css/people_lyraaura.css
+++ b/Lyra_UI/css/people_lyraaura.css
@@ -71,6 +71,7 @@
 }
 
 .side-panel .people-img {
+    display: none;
     width: 150px;
     height: 150px;
     border: none;
